:bug: fix a collapsed image issue on chromebook browsers

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -221,7 +221,6 @@ h3.demo-title { /* we're using this element selector for additional specificity 
 }
 .demo-thumbnail {
   width: 100%;
-  max-height: 100%;
   display: block;
   border: 1px solid #999;
 }
